[package]
name = "uniform_grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
itertools = "0.10.3"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
ply-rs = "0.1.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.bench]
debug = true
inherits = "release"

[[bench]]
harness = false
name = "bench_checks"
